# amicooked

./: .gitignore  README.md  devenv.nix  devenv.yaml  main.py  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: settings.local.json
api/: ML_README.md  README.md  ml_server.py  rl_model.py  test_cooked_vs_chilling.py  test_rl_api.py
src/app/: actions.ts  globals.css  layout.tsx  page.tsx
src/components/: Dashboard.tsx  DataExplorer.tsx  Loading.tsx  Survey.tsx  TrendVisualizer.tsx
src/lib/: api.ts  calculationService.ts  dataset.ts  surveyConfig.ts  types.ts
