[project]
name = "amicooked"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlcroissant>=1.0.22",
    "pandas>=2.3.3",
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "numpy>=2.2.0",
    "scikit-learn>=1.6.0",
    "requests>=2.32.0",
]
